--- a/diaryapp/pubspec.yaml
+++ b/diaryapp/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^4.19.4
   provider: ^6.1.2
   flutter_svg: ^2.0.10+1
+  table_calendar: ^3.1.1
 
 dev_dependencies:
   flutter_test:
